Fixed icon spacing and image-right positioning for mobile

--- a/docroot/themes/custom/uids_base/scss/components/event.scss
+++ b/docroot/themes/custom/uids_base/scss/components/event.scss
@@ -11,7 +11,7 @@
   }
 
   .events-card__row .svg-inline--fa {
-    margin-left: -10px;
+    margin-left: -20px;
   }
 }
 
@@ -200,11 +200,10 @@
   }
 
   &.image-right .events-card__image {
-    order: 1;
-
     @include breakpoint(sm) {
       margin-left: 15px;
       margin-right: 0;
+      order: 1;
     }
   }
 
